<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:singleLine="true"
            android:text="Shopping Mall"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="0.0"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nav_dashboard"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:gravity="center_vertical"
                android:paddingStart="25dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                android:text="@string/dashboard"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none" />

            <TextView
                android:id="@+id/nav_orders"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:gravity="center_vertical"
                android:paddingStart="25dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                android:text="@string/my_orders"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/free_registration"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:drawableStart="@drawable/new_kyc"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:paddingStart="25dp"
                android:paddingEnd="0dp"
                android:singleLine="true"
                android:text="@string/free_registration"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:visibility="gone" />


            <LinearLayout
                android:id="@+id/my_team_lo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="29dp"
                android:paddingEnd="0dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <View
                                android:layout_width="0.1dp"
                                android:layout_height="15dp"
                                android:background="@color/colorPrimary" />

                            <View
                                android:layout_width="10dp"
                                android:layout_height="10dp"
                                android:background="@drawable/circle_dot" />

                            <View
                                android:layout_width="0.1dp"
                                android:layout_height="15dp"
                                android:background="@color/colorPrimary" />

                        </LinearLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <View
                                android:layout_width="0.1dp"
                                android:layout_height="15dp"
                                android:background="@color/colorPrimary" />

                            <View
                                android:layout_width="10dp"
                                android:layout_height="10dp"
                                android:background="@drawable/circle_dot" />


                        </LinearLayout>
                    </RelativeLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp">

                    <TextView
                        android:id="@+id/direct_member"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:drawablePadding="20dp"
                        android:gravity="center_vertical"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
                        android:singleLine="true"
                        android:text="@string/direct_member"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/downline"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:drawablePadding="20dp"
                        android:gravity="center_vertical"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
                        android:singleLine="true"
                        android:text="@string/downline"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/colorPrimary"
                        android:textSize="13sp" />


                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/nav_profile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:gravity="center_vertical"
                android:paddingStart="25dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                android:text="My Account"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:visibility="gone" />


            <TextView
                android:id="@+id/nav_wallet"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:gravity="center_vertical"
                android:paddingStart="25dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                android:text="My Cart"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:visibility="visible" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>